--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
           <div class="actions">
             <!-- Play button opens the game in a new tab (hosted path) -->
-            <a class="btn btn-play" id="openGame" href="./index.html" target="_blank" rel="noopener">Open Game</a>
+            <a class="btn btn-play" id="openGame" href="./Collect & Avoid.html" target="_blank" rel="noopener">Open Game</a>
             <!-- GitHub repo link (replace with your repo URL) -->
             <a class="btn btn-git" id="openRepo" href="https://github.com/Paurush-Nimje/Game-Portal" target="_blank" rel="noopener">View on GitHub</a>
           </div>
